add unit test testCreateEntity